# globally-optimal-direction-fields

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
frame_field/: CMakeLists.txt  ffgen.cc  ffgen.hh  ffio.cc  ffio.hh  geometry.hh
mesh/: CMakeLists.txt  geometry.hh  handle.hh  mesh.cc  mesh.hh  mesh_io.cc  mesh_io.hh  property.hh  traits.hh  tri_mesh.cc  tri_mesh.hh
numeric/: linear_system.cc  linear_system.hh  sparse_solver.cc  sparse_solver.hh
numerical_method/: CMakeLists.txt  chebyshev.hh  linear_system.cc  linear_system.hh
test/: CMakeLists.txt  cheby.cc  main.cc
